* added ThumbnailComponent class to display image thumbnail with basic description. * added many methods for sequence / image / metadata loading... * added series selection dialog for multi series image file. * added MetaDataUtil class which provide metadata utilities. * fixed daemons plugins start and stop operations. * fixed PermGen space problems. * better metadata preservation. * simplified DataIterator. * cleanup and minors fixes...